[gd_scene load_steps=3 format=3 uid="uid://tg76e0poxjuq"]

[ext_resource type="Script" uid="uid://kgfggrkfqx17" path="res://network.gd" id="1_qmnym"]
[ext_resource type="Script" uid="uid://bxuwu2qsr7kx6" path="res://addons/godot-socketio/socketio.gd" id="2_n0pfp"]

[node name="network" type="Node"]
script = ExtResource("1_qmnym")

[node name="SocketIO" type="Node" parent="."]
script = ExtResource("2_n0pfp")
default_namespace = "ball"
socket_path = "/socket/socket.io"
base_url = "https://server.silverspace.io"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Timer2" type="Timer" parent="."]

[node name="sync" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="reconnect" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="event_received" from="SocketIO" to="." method="_on_socket_io_event_received"]
[connection signal="socket_connected" from="SocketIO" to="." method="_on_socket_io_socket_connected"]
[connection signal="socket_disconnected" from="SocketIO" to="." method="_on_socket_io_socket_disconnected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="sync" to="." method="_on_sync_timeout"]
[connection signal="timeout" from="reconnect" to="." method="_on_reconnect_timeout"]
